@@ -52,11 +52,12 @@ private slots:
     void updateEntryAdvancedTab();
     void updateEntryAutotypeTab();
     void setPasswordVisible(bool state);
-    void setNotesVisible(bool state);
+    void setEntryNotesVisible(bool state);
+    void setGroupNotesVisible(bool state);
+    void setNotesVisible(QLabel* notesLabel, const QString notes, bool state);
 
     void updateGroupHeaderLine();
     void updateGroupGeneralTab();
-    void updateGroupNotesTab();
 #if defined(WITH_XC_KEESHARE)
     void updateGroupSharingTab();
 #endif
