@@ -3,6 +3,7 @@
 - Group sorting feature [#3282]
 - CLI: Add 'flatten' option to the 'ls' command [#3276]
 - Rework the Entry Preview panel [#3306]
+- Move notes to General tab on Group Preview Panel [#3336]
 
 2.4.3 (2019-06-12)
 =========================
